--- a/src/components/Block/Block.scss
+++ b/src/components/Block/Block.scss
@@ -1,5 +1,6 @@
-.button {
-  &--large {
-    height: 56px !important;
-  }
+.block {
+  padding: 45px;
+  background: #fff;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.04204);
+  border-radius: 3px;
 }
