--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -3,8 +3,22 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  &__top {
+    text-align: center;
+    margin-bottom: 50px;
+    h2 {
+      font-size: 28px;
+      line-height: 33px;
+      margin-bottom: 5px;
+    }
+    p {
+      font-size: 18px;
+      line-height: 21px;
+      letter-spacing: 0.1px;
+      opacity: 0.5;
+    }
+  }
   .block {
-    max-width: 430px;
-    width: 100%;
+    width: 430px;
   }
 }
