changed color for info icon

--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -42,11 +42,14 @@
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    p {
+      color: #adadad;
+    }
     h2 {
       margin-top: 20px;
     }
     svg {
-      color: blue;
+      color: #1890ff;
     }
   }
 }
