--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -1,5 +1,10 @@
-.button {
-  &--large {
-    height: 56px !important;
+.message {
+  display: flex;
+  flex-direction: column;
+  &__avatar {
+    border-radius: 50px;
+    width: 33px;
+    height: 33px;
+    margin-right: 13px;
   }
 }
