--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -1,6 +1,5 @@
 .message {
   display: flex;
-  flex-direction: column;
   &__avatar {
     img {
       border-radius: 50px;
@@ -9,5 +8,10 @@
       margin-right: 13px;
       margin-bottom: 18px;
     }
+  }
+  &__bubble {
+    background: #3674ff;
+    box-shadow: 0px 5px 5px rgba(54, 116, 255, 0.196733);
+    border-radius: 12px 12px 12px 0px;
   }
 }
