--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -10,7 +10,7 @@
     }
   }
   &__bubble {
-    background: #3674ff;
+    background: $blue;
     box-shadow: 0px 5px 5px rgba(54, 116, 255, 0.196733);
     border-radius: 12px 12px 12px 0px;
   }
