--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -1,3 +1,5 @@
+@import "~styles/variables";
+
 .message {
   display: flex;
   &__avatar {
@@ -13,5 +15,8 @@
     background: $blue;
     box-shadow: 0px 5px 5px rgba(54, 116, 255, 0.196733);
     border-radius: 12px 12px 12px 0px;
+  }
+  &__text {
+    color: #fff;
   }
 }
