--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -16,6 +16,11 @@
     box-shadow: 0px 5px 5px rgba(54, 116, 255, 0.196733);
     border-radius: 12px 12px 12px 0px;
     padding: 15px;
+    margin-bottom: 8px;
+  }
+  &__date {
+    font-size: 12px;
+    opacity: 0.4;
   }
   &__text {
     color: #fff;
