--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -2,13 +2,16 @@
 
 .message {
   display: flex;
+  max-width: 440px;
   &__avatar {
+    display: flex;
+    flex-direction: column-reverse;
     img {
       border-radius: 50px;
       width: 33px;
       height: 33px;
       margin-right: 13px;
-      margin-bottom: 18px;
+      margin-bottom: 23px;
     }
   }
   &__bubble {
@@ -20,7 +23,7 @@
   }
   &__date {
     font-size: 12px;
-    opacity: 0.4;
+    opacity: 0.5;
   }
   &__text {
     color: #fff;
