--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -41,6 +41,9 @@
       border: 1px solid #ececec;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.220444);
       border-radius: 12px 12px 0 12px;
+      #{$self}__text {
+        color: $black;
+      }
     }
   }
 }
