--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -6,6 +6,7 @@
     display: flex;
     max-width: 440px;
     margin-bottom: 15px;
+    position: relative;
   }
   &__avatar {
     display: flex;
@@ -32,6 +33,11 @@
   &__text {
     color: #fff;
     line-height: 20px;
+  }
+  &__icon-readed {
+    position: absolute;
+    bottom: 20px;
+    left: -25px;
   }
   &--isme {
     display: flex;
