--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -35,6 +35,7 @@
     margin-bottom: 5px;
     &-item {
       margin-right: 5px;
+      cursor: pointer;
       img {
         width: 45px;
         height: 45px;
