styling typing buble

--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -80,4 +80,27 @@
       }
     }
   }
+  &__typing {
+    height: 17px;
+    width: 17px;
+    border-radius: 50%;
+    display: block;
+    float: left;
+    margin: 0 0 0 8px;
+    &:first-child {
+      margin: 0;
+    }
+    &.one {
+      -webkit-animation: cycleOne 1s ease-in-out infinite;
+      -webkit-animation-direction: normal;
+    }
+    &.two {
+      -webkit-animation: cycleOne 1s ease-in-out infinite;
+      -webkit-animation-direction: normal;
+    }
+    &.three {
+      -webkit-animation: cycleOne 1s ease-in-out infinite;
+      -webkit-animation-direction: normal;
+    }
+  }
 }
