--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -86,21 +86,17 @@
       width: 8px;
       border-radius: 50%;
       background: #c1c1c1;
-      display: block;
-      float: left;
-      margin: 0 0 0 8px;
-      &:first-child {
-        margin: 0;
-      }
-      &.one {
+      display: inline-block;
+      margin-right: 8px;
+      &:nth-of-type(1) {
         -webkit-animation: cycleOne 1s ease-in-out infinite;
         -webkit-animation-direction: normal;
       }
-      &.two {
+      &:nth-of-type(2) {
         -webkit-animation: cycleOne 1s ease-in-out infinite;
         -webkit-animation-direction: normal;
       }
-      &.three {
+      &:nth-of-type(3) {
         -webkit-animation: cycleOne 1s ease-in-out infinite;
         -webkit-animation-direction: normal;
       }
