--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -89,17 +89,20 @@
       display: inline-block;
       margin-right: 8px;
       &:nth-of-type(1) {
-        -webkit-animation: cycleOne 1s ease-in-out infinite;
-        -webkit-animation-direction: normal;
+        animation: typingAnimation 1s ease-in-out infinite;
+        direction: normal;
       }
       &:nth-of-type(2) {
-        -webkit-animation: cycleOne 1s ease-in-out infinite;
-        -webkit-animation-direction: normal;
+        animation: typingAnimation 1s ease-in-out infinite;
+        animation-direction: normal;
       }
       &:nth-of-type(3) {
-        -webkit-animation: cycleOne 1s ease-in-out infinite;
-        -webkit-animation-direction: normal;
+        animation: typingAnimation 1s ease-in-out infinite;
+        animation-direction: normal;
       }
     }
   }
+}
+
+@-webkit-keyframes typingAnimation {
 }
