--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -85,24 +85,28 @@
       height: 8px;
       width: 8px;
       border-radius: 50%;
-      background: #c1c1c1;
+      background: #fff;
       display: inline-block;
       margin-right: 8px;
-      &:nth-of-type(1) {
-        animation: typingAnimation 1s ease-in-out infinite;
-        direction: normal;
-      }
+      animation-name: typingAnimation;
+      animation-duration: 1s;
+      animation-timing-function: ease-in-out;
+      animation-iteration-count: infinite;
       &:nth-of-type(2) {
-        animation: typingAnimation 1s ease-in-out infinite;
-        animation-direction: normal;
+        animation-duration: 1.5s;
       }
       &:nth-of-type(3) {
-        animation: typingAnimation 1s ease-in-out infinite;
-        animation-direction: normal;
+        animation-duration: 1.8s;
       }
     }
   }
 }
 
-@-webkit-keyframes typingAnimation {
+@keyframes typingAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
