--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -91,7 +91,7 @@
       height: 8px;
       width: 8px;
       border-radius: 50%;
-      background: #fff;
+      background: $message-typing-circle;
       display: inline-block;
       margin-right: 8px;
       animation-name: typingAnimation;
