--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -82,6 +82,7 @@
   }
   &--istyping {
     #{$self}__bubble {
+      padding: 15px 20px;
       background-color: $message-typing-background;
       box-shadow: 0 5px 5px rgba(0, 0, 0, 0.0220444);
     }
