styling dialog item

--- a/src/components/DialogItem/DialogItem.scss
+++ b/src/components/DialogItem/DialogItem.scss
@@ -1,1 +1,13 @@
-
+.dialogs {
+  &__item {
+    display: flex;
+    &-avatar {
+      flex-basis: 40px;
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+      }
+    }
+  }
+}
