--- a/src/components/DialogItem/DialogItem.scss
+++ b/src/components/DialogItem/DialogItem.scss
@@ -1,11 +1,11 @@
 .dialogs {
-  width: 280px;
+  width: 300px;
   &__item {
     display: flex;
     &-avatar {
-      flex: 0 0 50px;
-      width: 50px;
-      height: 50px;
+      flex: 0 0 40px;
+      width: 40px;
+      height: 40px;
       margin-right: 10px;
       img {
         width: 100%;
@@ -14,10 +14,25 @@
       }
     }
     &-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      flex: 1;
       &-top {
+        display: flex;
         b {
+          flex: 1;
           font-size: 14px;
           font-weight: 500;
+          margin-bottom: 5px;
+        }
+        span {
+          opacity: 0.5;
+        }
+      }
+      &-bottom {
+        p {
+          opacity: 0.5;
         }
       }
     }
