--- a/src/components/DialogItem/DialogItem.scss
+++ b/src/components/DialogItem/DialogItem.scss
@@ -31,8 +31,17 @@
         }
       }
       &-bottom {
+        position: relative;
         p {
           opacity: 0.5;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          width: 250px;
+          height: 1.2em;
+          white-space: nowrap;
+        }
+        &-count {
+          background: #f46b6b;
         }
       }
     }
