--- a/src/components/DialogItem/DialogItem.scss
+++ b/src/components/DialogItem/DialogItem.scss
@@ -53,6 +53,7 @@
           font-size: 11px;
           text-align: center;
           line-height: 17px;
+          box-shadow: 0 0 0px 3px #fff;
         }
       }
     }
