--- a/src/components/DialogItem/DialogItem.scss
+++ b/src/components/DialogItem/DialogItem.scss
@@ -2,6 +2,7 @@
   width: 300px;
   &__item {
     display: flex;
+    $item: $;
     &-avatar {
       flex: 0 0 40px;
       width: 40px;
@@ -12,6 +13,8 @@
         height: 100%;
         border-radius: 50%;
       }
+    }
+    &--online {
     }
     &-info {
       display: flex;
