--- a/src/components/DialogItem/DialogItem.scss
+++ b/src/components/DialogItem/DialogItem.scss
@@ -75,6 +75,11 @@
           line-height: 17px;
           box-shadow: 0 0 0px 3px #fff;
         }
+        .message__icon-readed {
+          bottom: 0;
+          left: auto;
+          right: 0;
+        }
       }
     }
   }
