--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -52,6 +52,11 @@
     bottom: 20px;
     left: -25px;
   }
+  &--is-audio {
+    #{$self}__audio {
+    }
+  }
+
   &--isme {
     display: flex;
     flex-direction: row-reverse;
