styling audio message

--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -54,6 +54,14 @@
   }
   &--is-audio {
     #{$self}__audio {
+      &-btn {
+        button {
+          width: 28px;
+          height: 28px;
+          border-radius: 30px;
+          background: #0f3997;
+        }
+      }
     }
   }
 
