deleted outline for all elements

--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -56,6 +56,7 @@
     #{$self}__audio {
       &-btn {
         button {
+          border: 0;
           width: 28px;
           height: 28px;
           border-radius: 30px;
