--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -54,13 +54,21 @@
   }
   &--is-audio {
     #{$self}__audio {
+      &-info {
+        display: flex;
+        align-items: center;
+      }
       &-btn {
         button {
+          cursor: pointer;
           border: 0;
           width: 28px;
           height: 28px;
           border-radius: 30px;
           background: #0f3997;
+          img {
+            height: 13px;
+          }
         }
       }
     }
