--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -53,6 +53,9 @@
     left: -25px;
   }
   &--is-audio {
+    audio {
+      display: none;
+    }
     #{$self}__bubble {
       position: relative;
       overflow: hidden;
@@ -88,6 +91,7 @@
         position: absolute;
         left: 0;
         top: 0;
+        height: 100%;
         background-color: #418fff;
       }
     }
