--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -93,6 +93,7 @@
         top: 0;
         height: 100%;
         background-color: #418fff;
+        transition: width 0.2s ease;
       }
     }
   }
