--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -3,8 +3,10 @@
   width: 100%;
   height: 100%;
   &--symbol {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #fff;
-    text-align: center;
     font-weight: 600;
     line-height: 36px;
     font-size: 18px;
