--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -1,6 +1,10 @@
 .chat {
+  display: flex;
   background-color: #fff;
   width: 1140px;
   margin: 0 auto;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.04204);
+  &__sidebar {
+    width: 320px;
+  }
 }
