--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -5,6 +5,13 @@
   margin: 0 auto;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.04204);
   &__sidebar {
+    &-header {
+      display: flex;
+      justify-content: space-between;
+    }
     width: 320px;
+  }
+  &__dialog {
+    flex: 1;
   }
 }
