--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -8,6 +8,13 @@
     &-header {
       display: flex;
       justify-content: space-between;
+      padding: 20px;
+      & > div {
+        i {
+          display: inline-block;
+          margin-right: 5px;
+        }
+      }
     }
     width: 320px;
   }
