--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -5,6 +5,8 @@
   margin: 0 auto;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.04204);
   &__sidebar {
+    width: 320px;
+    border-right: 1px solid #f7f7f7;
     &-header {
       display: flex;
       justify-content: space-between;
@@ -16,7 +18,20 @@
         }
       }
     }
-    width: 320px;
+    &-search {
+      padding: 0 20px 20px 20px;
+      .ant-input {
+        background: #f7f8f9;
+        border: 0;
+        height: 38px;
+        padding: 4px 11px 6px;
+      }
+    }
+    &-dialogs {
+      .dialogs {
+        padding: 0 20px;
+      }
+    }
   }
   &__dialog {
     flex: 1;
