--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -1,5 +1,6 @@
 .chat {
   display: flex;
+  height: 100%;
   background-color: #fff;
   width: 1140px;
   margin: 0 auto;
@@ -32,6 +33,8 @@
         &__item {
           padding: 10px 20px;
           margin-bottom: 0;
+          cursor: pointer;
+          &.active,
           &:hover {
             background-color: #f3f7ff;
           }
