--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -55,6 +55,8 @@
         position: relative;
         .status {
           color: #bfbfbf;
+          display: inline-block;
+          position: relative;
           &--online {
             &::before {
               background-color: #00c980;
@@ -62,6 +64,9 @@
           }
           &::before {
             display: block;
+            position: absolute;
+            top: 5px;
+            left: -11px;
             content: "";
             width: 6px;
             height: 6px;
