--- a/src/components/ChatInput/ChatInput.scss
+++ b/src/components/ChatInput/ChatInput.scss
@@ -7,4 +7,9 @@
   span.anticon {
     font-size: 18px;
   }
+  input:focus,
+  input:hover {
+    box-shadow: none;
+    border: 1px solid #d9d9d9;
+  }
 }
