--- a/src/components/ChatInput/ChatInput.scss
+++ b/src/components/ChatInput/ChatInput.scss
@@ -1,9 +1,15 @@
 .chat-input {
-  padding: 20px;
+  margin: 20px;
+  position: relative;
   &__smile-btn,
   &__actions {
     position: absolute;
     z-index: 1;
+  }
+  &__smile-btn {
+    background-color: #fff;
+    top: 11px;
+    left: 10px;
   }
   span.anticon {
     font-size: 18px;
