--- a/src/components/ChatInput/ChatInput.scss
+++ b/src/components/ChatInput/ChatInput.scss
@@ -3,6 +3,11 @@
   margin: 20px;
   position: relative;
   &__smile-btn {
+    opacity: 0.5;
+    cursor: pointer;
+    &:hover {
+      opacity: 1;
+    }
     margin-right: 15px;
     span.anticon {
       margin-top: 11px;
