--- a/src/components/ChatInput/ChatInput.scss
+++ b/src/components/ChatInput/ChatInput.scss
@@ -12,6 +12,7 @@
     cursor: pointer;
     font-size: 18px;
     opacity: 0.5;
+    transition: opacity 0.2s ease;
     &:hover {
       opacity: 1;
     }
