--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -64,6 +64,7 @@
     }
     &-messages {
       padding: 20px;
+      padding-bottom: 0;
       overflow: auto;
       height: calc(100% - 138px);
     }
