--- a/src/components/ChatInput/ChatInput.scss
+++ b/src/components/ChatInput/ChatInput.scss
@@ -33,9 +33,13 @@
     margin-left: 15px;
     cursor: pointer;
   }
-  input:focus,
-  input:hover {
-    box-shadow: none;
-    border: 1px solid #d9d9d9;
+  input {
+    padding: 6px 11px 8px;
+    font-size: 14px;
+    &:focus,
+    &:hover {
+      box-shadow: none;
+      border: 1px solid #d9d9d9;
+    }
   }
 }
