--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,3 +21,21 @@ html,
 * {
   outline: none;
 }
+
+.ant-btn-circle {
+  border: 0;
+  box-shadow: none;
+  color: #202020 !important;
+  opacity: 0.5;
+  transition: opacity 0.2s ease;
+  &:hover {
+    opacity: 1;
+  }
+  &:after {
+    display: none;
+  }
+}
+span.anticon {
+  cursor: pointer;
+  font-size: 18px;
+}
