modified input change handler

--- a/src/components/Dialogs/Dialogs.scss
+++ b/src/components/Dialogs/Dialogs.scss
@@ -1,6 +1,6 @@
 .dialogs {
   &__search {
-    padding: 0 20px 20px 20px;
+    padding: 2px 20px 20px 20px;
     .ant-input {
       background-color: #f7f8f9;
       border: 0;
