--- a/src/styles/layouts/_chat.scss
+++ b/src/styles/layouts/_chat.scss
@@ -47,6 +47,13 @@
   }
   &__dialog {
     flex: 1;
+    position: relative;
+    .ant-empty {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
     &-header {
       display: flex;
       justify-content: space-between;
