--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -14,6 +14,11 @@
       font-size: 18px;
     }
   }
+  &__emoji-picker {
+    position: absolute;
+    bottom: 50px;
+    z-index: 1;
+  }
   &__actions {
     display: flex;
     width: 80px;
