--- a/frontend/src/components/DialogItem/DialogItem.scss
+++ b/frontend/src/components/DialogItem/DialogItem.scss
@@ -34,6 +34,9 @@
         }
       }
     }
+    &--selected {
+      background-color: #f3f7ff;
+    }
     &-info {
       display: flex;
       flex-direction: column;
