--- a/frontend/src/components/Message/Message.scss
+++ b/frontend/src/components/Message/Message.scss
@@ -49,10 +49,12 @@
     color: #fff;
     line-height: 20px;
   }
-  &__icon-readed {
-    position: absolute;
-    bottom: 20px;
-    left: -25px;
+  &__icon {
+    &-readed {
+      position: absolute;
+      bottom: 20px;
+      left: -25px;
+    }
   }
   &--is-audio {
     audio {
