--- a/frontend/src/components/Message/Message.scss
+++ b/frontend/src/components/Message/Message.scss
@@ -57,6 +57,9 @@
     }
     &-actions {
       transform: rotate(90deg);
+      position: absolute;
+      left: -31px;
+      top: -5px;
     }
   }
   &--is-audio {
