--- a/frontend/src/components/Message/Message.scss
+++ b/frontend/src/components/Message/Message.scss
@@ -56,6 +56,7 @@
       left: -25px;
     }
     &-actions {
+      display: none;
       transform: rotate(90deg);
       position: absolute;
       left: -31px;
