--- a/frontend/src/styles/layouts/_chat.scss
+++ b/frontend/src/styles/layouts/_chat.scss
@@ -56,7 +56,7 @@
     }
     &-header {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       padding: 15px;
       border-bottom: 1px solid #f7f7f7;
