--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,5 +7,5 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Consolas, "Courier New", monospace;
+  font-family: Menlo, Consolas, "Courier New", monospace;
 }
