--- a/frontend/src/components/Message/Message.scss
+++ b/frontend/src/components/Message/Message.scss
@@ -32,6 +32,7 @@
     border-radius: 12px 12px 12px 0px;
     padding: 15px;
     margin-bottom: 8px;
+    order: 2;
   }
   &__date {
     font-size: 12px;
