--- a/frontend/src/components/Message/Message.scss
+++ b/frontend/src/components/Message/Message.scss
@@ -135,6 +135,7 @@
     }
     #{$self}__info {
       display: flex;
+      align-items: center;
       flex-direction: column;
       text-align: right;
     }
