--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -1,7 +1,9 @@
 .chat-input {
-  display: flex;
   margin: 20px;
   position: relative;
+  & div {
+    display: flex;
+  }
   &__smile-btn {
     margin-right: 15px;
   }
