--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -1,7 +1,7 @@
 .chat-input {
   margin: 20px;
   position: relative;
-  & div {
+  & > div:first-of-type {
     display: flex;
   }
   &__smile-btn {
