--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -18,6 +18,10 @@
     bottom: 50px;
     z-index: 1;
   }
+  &__attachment {
+    padding-left: 47px;
+    padding-top: 10px;
+  }
   &__actions {
     display: flex;
     width: 80px;
