--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -18,6 +18,9 @@
     bottom: 50px;
     z-index: 1;
   }
+  &__record-btn{
+    
+  }
   &__attachment {
     padding-left: 47px;
     padding-top: 10px;
