--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -20,7 +20,7 @@
   }
   &__record-btn{
     i {
-      
+
     }
   }
   &__attachment {
@@ -56,3 +56,5 @@
     }
   }
 }
+
+@keyframes record-animation {}
