--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -21,6 +21,8 @@
   &__record-btn{
     i {
         display: inline-block;
+        height: 10px;
+        width: 10px;
     }
   }
   &__attachment {
