--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -23,6 +23,7 @@
         display: inline-block;
         height: 10px;
         width: 10px;
+        background-color: #f56b6b;
     }
   }
   &__attachment {
