--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -24,6 +24,7 @@
         height: 10px;
         width: 10px;
         background-color: #f56b6b;
+        border-radius: 30px;
     }
   }
   &__attachment {
