--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -25,6 +25,7 @@
         width: 10px;
         background-color: #f56b6b;
         border-radius: 30px;
+        box-shadow: 0 0 5px #f56b6b;
     }
   }
   &__attachment {
