--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -26,6 +26,10 @@
         background-color: #f56b6b;
         border-radius: 30px;
         box-shadow: 0 0 5px #f56b6b;
+        position: relative;
+        &::before {
+          position: absolute;
+        }
     }
   }
   &__attachment {
