--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -29,6 +29,13 @@
         position: relative;
         &::before {
           position: absolute;
+          left: 0;
+          top: 0;
+          height: 10px;
+          width: 10px;
+          background-color: #f56b6b;
+          border-radius: 30px;
+          animation: wave-animation 0.2s ease-in-out;
         }
     }
   }
@@ -66,4 +73,4 @@
   }
 }
 
-@keyframes record-animation {}
+@keyframes wave-animation {}
