--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -18,25 +18,25 @@
     bottom: 50px;
     z-index: 1;
   }
-  &__record-btn{
+  &__record-btn {
     i {
-        display: inline-block;
+      display: inline-block;
+      height: 10px;
+      width: 10px;
+      background-color: #f56b6b;
+      border-radius: 30px;
+      box-shadow: 0 0 5px #f56b6b;
+      position: relative;
+      &::before {
+        position: absolute;
+        left: 0;
+        top: 0;
         height: 10px;
         width: 10px;
         background-color: #f56b6b;
         border-radius: 30px;
-        box-shadow: 0 0 5px #f56b6b;
-        position: relative;
-        &::before {
-          position: absolute;
-          left: 0;
-          top: 0;
-          height: 10px;
-          width: 10px;
-          background-color: #f56b6b;
-          border-radius: 30px;
-          animation: wave-animation 0.2s ease-in-out;
-        }
+        animation: wave-animation 0.2s ease-in-out;
+      }
     }
   }
   &__attachment {
@@ -73,4 +73,7 @@
   }
 }
 
-@keyframes wave-animation {}
+@keyframes wave-animation {
+  from {
+  }
+}
