--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -74,6 +74,13 @@
 }
 
 @keyframes wave-animation {
-  from {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
