--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -18,7 +18,7 @@
     bottom: 50px;
     z-index: 1;
   }
-  &__record-btn {
+  &__record-status {
     i {
       display: inline-block;
       height: 10px;
