--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -36,7 +36,7 @@
         top: 0;
         height: 10px;
         width: 10px;
-        background-color: #f56b6b;
+        background-color: rgba(245, 107, 107, 0.2);
         border-radius: 30px;
         animation: wave-animation 0.2s ease-in-out;
       }
