--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -38,7 +38,7 @@
         width: 10px;
         background-color: rgba(245, 107, 107, 0.2);
         border-radius: 30px;
-        animation: wave-animation 0.2s ease-in-out;
+        animation: wave-animation 0.2s ease-in-out infinite;
       }
     }
   }
