--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -27,6 +27,7 @@
       width: 10px;
       background-color: #f56b6b;
       border-radius: 30px;
+      margin: 10px 0;
       position: relative;
       &::before {
         content: "";
