--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -21,6 +21,7 @@
   &__record-status {
     display: flex;
     align-items: center;
+    flex: 1;
     i {
       display: inline-block;
       height: 10px;
