--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     flex: 1;
+    margin: 0 10px;
     i {
       display: inline-block;
       height: 10px;
