--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -29,6 +29,7 @@
       width: 10px;
       background-color: #f56b6b;
       border-radius: 30px;
+      margin-right: 10px;
       position: relative;
       &::before {
         content: "";
