--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -23,6 +23,7 @@
     justify-content: center;
     align-items: center;
     flex: 1;
+    color: #f56b6b;
     i {
       display: inline-block;
       height: 10px;
