--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -85,8 +85,11 @@
   0% {
     transform: scale(1);
   }
+  25% {
+    transform: scale(1.15);
+  }
   50% {
-    transform: scale(1.1);
+    transform: scale(1.3);
   }
   100% {
     transform: scale(1);
