--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -34,6 +34,7 @@
       position: relative;
       &::before {
         content: "";
+        content: "1";
         position: absolute;
         left: 0;
         top: 0;
