change style for component chatinput

--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -35,6 +35,9 @@
       &::before {
         content: "";
         content: "1";
+        content: "2";
+        content: "3";
+        content: "4";
         position: absolute;
         left: 0;
         top: 0;
