--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -25,7 +25,7 @@
     flex: 1;
     color: #f56b6b;
     i {
-      display: flex;
+      display: inline-block;
       height: 10px;
       width: 10px;
       background-color: #f56b6b;
