--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -31,7 +31,7 @@
       background-color: #f56b6b;
       border-radius: 30px;
       margin-right: 8px;
-      position: relative;
+      position: absolute;
       &::before {
         content: "";
         position: absolute;
