--- a/frontend/src/components/DialogItem/DialogItem.scss
+++ b/frontend/src/components/DialogItem/DialogItem.scss
@@ -10,6 +10,7 @@
     &-avatar {
       position: relative;
       flex: 0 0 40px;
+      margin-top: 20px;
       width: 40px;
       height: 40px;
       margin-right: 10px;
