--- a/frontend/src/components/DialogItem/DialogItem.scss
+++ b/frontend/src/components/DialogItem/DialogItem.scss
@@ -43,7 +43,7 @@
     &-info {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
       flex: 1;
       &-top {
         display: flex;
