--- a/frontend/src/components/Block/Block.scss
+++ b/frontend/src/components/Block/Block.scss
@@ -1,5 +1,5 @@
 .block {
-  margin: 10px;
+  margin: 10px 20px;
   padding: 45px;
   background: #fff;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.04204);
