--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -7,7 +7,9 @@
   }
 }
 .custom-block {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 10px 20px;
   padding: 0;
   font-size: 24px;
