--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -3,7 +3,7 @@
     margin-bottom: 0;
     &-label {
       line-height: inherit;
-      display: inline-block;
+      display: block;
     }
   }
 }
