--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -13,6 +13,9 @@
       font-size: 18px;
     }
   }
+  &__active {
+    display: none;
+  }
   &__emoji-picker {
     position: absolute;
     bottom: 50px;
