--- a/frontend/src/components/ChatInput/ChatInput.scss
+++ b/frontend/src/components/ChatInput/ChatInput.scss
@@ -7,7 +7,7 @@
   &__smile-btn {
     margin-right: 15px;
     &--active {
-      display: block;
+      display: grid;
     }
   }
   .ant-btn-circle {
