--- a/frontend/src/components/Avatar/Avatar.scss
+++ b/frontend/src/components/Avatar/Avatar.scss
@@ -13,7 +13,7 @@
   }
 }
 .semero-kozlat {
-  display: inherit;
+  display: inline;
   margin-top: 10px;
   margin-left: 19px;
   padding-bottom: 22px;
