add style for block

--- a/frontend/src/components/Block/Block.scss
+++ b/frontend/src/components/Block/Block.scss
@@ -5,7 +5,7 @@
   border-radius: 3px;
 }
 .wrapper {
-  display: auto;
+  display: none;
   font-size: 20px;
   line-height: 32px;
   font-family: serif;
