add style for sidebar

--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -16,7 +16,7 @@
   text-align: center;
 }
 .content_2 {
-display: auto;
+display: inline;
 max-width: 320px;
 width: 100%;
 margin: 20px 10px 40px;
