--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -27,7 +27,7 @@ text-align: right;
 color: #ccc;
 }
 .content_new {
-  display: initial;
+  display: inline-block;
   width: 200px;
   height: 150px;
 }
