add style for sidebar

--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -34,7 +34,7 @@ color: #ccc;
   margin-bottom: 15px;
 }
 .content_old {
-  display: grid;
+  display: flex;
   max-width: 500vw;
   width: 100%;
   background-color: #c8d2a6;
