--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -16,15 +16,15 @@
   text-align: center;
 }
 .content_2 {
-display: inline;
-max-width: 320px;
-width: 100%;
-margin: 20px 10px 40px;
-padding: 10px 5px;
-font-size: 16px;
-line-height: 16px;
-text-align: right;
-color: #ccc;
+  display: inline;
+  max-width: 320px;
+  width: 100%;
+  margin: 20px 10px 40px;
+  padding: 10px 5px;
+  font-size: 16px;
+  line-height: 16px;
+  text-align: right;
+  color: #ccc;
 }
 .content_new {
   display: inline-block;
@@ -42,6 +42,6 @@ color: #ccc;
   line-height: 30px;
   cursor: pointer;
 }
-.content_stat {
+.content_3 {
   display: grid;
 }
