--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -43,7 +43,7 @@
   cursor: pointer;
 }
 .content_3 {
-  display: flex;
+  display: block;
   margin-top: 20px;
   margin-left: 6px;
   padding: 20px 8px;
