--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -53,7 +53,7 @@
   font-size: 20px;
 }
 .content_resolve {
-  display: inline;
+  display: block;
   width: 100%;
   height: 100vh;
   text-align: center;
