--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -34,7 +34,7 @@
   margin-bottom: 15px;
 }
 .content_3 {
-  display: block;
+  display: inline-block;
   margin-top: 20px;
   margin-left: 6px;
   padding: 20px 8px;
